logs/twitter-text-py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twitter_text'...
Compiling './lib/python3.5/site-packages/twitter_text/autolink.py'...
***   File "./lib/python3.5/site-packages/twitter_text/autolink.py", line 309
    display_url_sans_ellipses = re.sub(ur'…', u'', display_url)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twitter_text/highlighter.py'...
***   File "./lib/python3.5/site-packages/twitter_text/highlighter.py", line 37
    for match in re.finditer(ur'%s' % kwargs.get('query'), stripped_text):
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twitter_text/regex.py'...
***   File "./lib/python3.5/site-packages/twitter_text/regex.py", line 36
    REGEXEN['spaces'] = re.compile(ur''.join(UNICODE_SPACES))
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twitter_text/templatetags'...
Compiling './lib/python3.5/site-packages/twitter_text/unicode.py'...
***   File "./lib/python3.5/site-packages/twitter_text/unicode.py", line 60
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twitter_text/validation.py'...
***   File "./lib/python3.5/site-packages/twitter_text/validation.py", line 78
    if re.search(ur''.join(REGEXEN['invalid_control_characters']), self.text):
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twitter_text_py-2.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
